styles.css
  body {
    width: 300px;
    font-family: Arial, sans-serif;
    text-align: center;
    background-color: #f9f9f9;
  }
  
  #addressInput {
    width: 90%;
    padding: 10px;
    margin: 10px 0;
    border: 1px solid #ccc;
    border-radius: 5px;
  }
  
  #errorMessage {
    color: red;
    font-size: 14px;
    margin-bottom: 10px;
    display: none;
  }
  
  .input-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 10px 0;
  }

  .platform-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 10px 0;
  }

  .top-row, .bottom-row {
    gap: 10px;  /* Space between platform buttons */
  }
  
  .platform {
    display: flex;
    flex-direction: column;
    align-items: center;
    background: none;
    border: none;
    cursor: pointer;
  }
  
  .platform img {
    width: 50px;
    height: 50px;
    border-radius: 10px;
    transition: transform 0.3s;
  }
  
  .platform img:hover {
    transform: scale(1.1);
  }
  
  .platform span {
    margin-top: 5px;
    font-size: 14px;
    color: #333;
  }

  .backup-section {
    display: flex;
    justify-content: flex-end; /* Align everything to the right */
    align-items: center; /* Center vertically */
    margin: 10px 0;
  }
  
  .backup-label {
    font-size: 11px;
    color: #333;
    margin-right: 4px; /* Space between label and buttons */
  }

  .backup-buttons-container {
  display: flex;
  gap: 5px;
  padding-right: 27px;  /* Add padding on the right to fine-tune */
}
  
  .backup-btn {
    padding: 4px 10px;
    background-color: #f1f1f1;
    color: #333;
    border: 1px solid #ccc;
    border-radius: 5px;
    cursor: pointer;
    font-size: 10px;
    transition: background-color 0.3s;
  }
  
  .backup-btn:hover {
    background-color: #e0e0e0;
  }

#addressInput {
  flex: 1;  /* Takes up remaining space */
  padding: 10px;
  border: 1px solid #ccc;
  border-right: none;  /* Remove border between input and button */
  border-radius: 5px 0 0 5px;
}

#pasteClipboardBtn {
  width: 50px;
  padding: 6px;
  border: 1px solid #ccc;
  border-left: none;  /* Remove border between input and button */
  background-color: #f0f0f0;
  cursor: pointer;
  border-radius: 0 5px 5px 0;  /* Rounded corner on the right side */
}

#pasteClipboardBtn img {
  width: 20px;
  height: 20px;
}

